--- a/scripts/e2e/config/istio/clusterlocal-gateway.yaml
+++ b/scripts/e2e/config/istio/clusterlocal-gateway.yaml
@@ -11,7 +11,9 @@ resources:
   requests:
     cpu: 25m
     memory: 64Mi
-  limits: ~
+  limits:
+    cpu: 25m
+    memory: 64Mi
 
 service:
   type: ClusterIP
