--- a/scripts/e2e/config/kserve/overlay.yaml
+++ b/scripts/e2e/config/kserve/overlay.yaml
@@ -9,9 +9,11 @@ spec:
       containers:
         - name: manager
           resources:
-            limits: ~
             requests:
-              cpu: 100m
+              cpu: 25m
+              memory: 64Mi
+            limits:
+              cpu: 25m
               memory: 64Mi
 ---
 apiVersion: v1
