--- a/scripts/e2e/config/minio/values.yaml
+++ b/scripts/e2e/config/minio/values.yaml
@@ -4,9 +4,7 @@ resources:
   requests:
     cpu: 10m
     memory: 64Mi
-  limits:
-    cpu: ~
-    memory: 64Mi
+  limits: ~
 
 accessKey: YOURACCESSKEY
 secretKey: YOURSECRETKEY
