--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -464,10 +464,8 @@ jobs:
           echo "::endgroup::"
 
           echo "::group::Get Minio pods"
-          kubectl get pods -n minio-operator -o wide
-          kubectl get pods -n minio-tenant -o wide
-          kubectl get pods -n minio-tenant -o yaml
-          kubectl get pvc -n minio-tenant -o yaml
+          kubectl get pods -n minio -o wide
+          kubectl get pods -n minio -o yaml
           echo "::endgroup::"
 
           echo "::group::Get deployments in caraml namespace"
