--- a/api/config/testdata/valid-environment-1.yaml
+++ b/api/config/testdata/valid-environment-1.yaml
@@ -46,7 +46,17 @@
       resource_type: "nvidia.com/gpu"
       node_selector:
         "cloud.google.com/gke-accelerator": "nvidia-tesla-t4"
-      monthly_cost_per_gpu: 189.07
+      min_monthly_cost_per_gpu: 189.07
+      max_monthly_cost_per_gpu: 189.07
+    - values: ["None", "1"]
+      display_name: "NVIDIA T4 with Time Sharing"
+      resource_type: "nvidia.com/gpu"
+      node_selector:
+        "cloud.google.com/gke-accelerator": "nvidia-tesla-t4"
+        "cloud.google.com/gke-max-shared-clients-per-gpu": "8"
+        "cloud.google.com/gke-gpu-sharing-strategy": "time-sharing"
+      min_monthly_cost_per_gpu: 23.63
+      max_monthly_cost_per_gpu: 189.07
     - values: ["None", "1", "2"]
       display_name: "NVIDIA P4"
       resource_type: "nvidia.com/gpu"
@@ -61,4 +71,5 @@
           operator: "Equal"
           value: "present"
           effect: "NoSchedule"
-      monthly_cost_per_gpu: 332.15
+      min_monthly_cost_per_gpu: 332.15
+      max_monthly_cost_per_gpu: 332.15
