--- a/api/config/testdata/valid-environment-1.yaml
+++ b/api/config/testdata/valid-environment-1.yaml
@@ -41,15 +41,15 @@
         interactiveMode: IfAvailable
         provideClusterInfo: true
   gpus:
-    - values: ["None", "1"]
-      display_name: "NVIDIA T4"
+    - name: "NVIDIA T4"
+      values: ["None", "1"]
       resource_type: "nvidia.com/gpu"
       node_selector:
         "cloud.google.com/gke-accelerator": "nvidia-tesla-t4"
       min_monthly_cost_per_gpu: 189.07
       max_monthly_cost_per_gpu: 189.07
-    - values: ["None", "1"]
-      display_name: "NVIDIA T4 with Time Sharing"
+    - name: "NVIDIA T4 with Time Sharing"
+      values: ["None", "1"]
       resource_type: "nvidia.com/gpu"
       node_selector:
         "cloud.google.com/gke-accelerator": "nvidia-tesla-t4"
@@ -57,8 +57,8 @@
         "cloud.google.com/gke-gpu-sharing-strategy": "time-sharing"
       min_monthly_cost_per_gpu: 23.63
       max_monthly_cost_per_gpu: 189.07
-    - values: ["None", "1", "2"]
-      display_name: "NVIDIA P4"
+    - name: "NVIDIA P4"
+      values: ["None", "1", "2"]
       resource_type: "nvidia.com/gpu"
       node_selector:
         "cloud.google.com/gke-accelerator": "nvidia-tesla-p4"
