--- a/scripts/e2e/config/knative/overlay.yaml
+++ b/scripts/e2e/config/knative/overlay.yaml
@@ -13,8 +13,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: 20m
-              memory: 64Mi
+              cpu: ~
+              memory: 256Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -31,8 +31,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: 20m
-              memory: 64Mi
+              cpu: ~
+              memory: 256Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -49,8 +49,8 @@ spec:
               cpu: 50m
               memory: 64Mi
             limits:
-              cpu: 50m
-              memory: 64Mi
+              cpu: ~
+              memory: 256Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -67,8 +67,8 @@ spec:
               cpu: 50m
               memory: 64Mi
             limits:
-              cpu: 50m
-              memory: 64Mi
+              cpu: ~
+              memory: 256Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -85,8 +85,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: 20m
-              memory: 64Mi
+              cpu: ~
+              memory: 256Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -103,8 +103,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: 20m
-              memory: 64Mi
+              cpu: ~
+              memory: 256Mi
 
 ---
 apiVersion: v1
