--- a/scripts/e2e/config/kserve/overlay.yaml
+++ b/scripts/e2e/config/kserve/overlay.yaml
@@ -13,7 +13,7 @@ spec:
               cpu: 25m
               memory: 64Mi
             limits:
-              cpu: 25m
+              cpu: ~
               memory: 64Mi
 ---
 apiVersion: v1
