--- a/scripts/e2e/config/knative/overlay.yaml
+++ b/scripts/e2e/config/knative/overlay.yaml
@@ -13,8 +13,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: ~
-              memory: 256Mi
+              cpu: 100m
+              memory: 512Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -31,8 +31,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: ~
-              memory: 256Mi
+              cpu: 100m
+              memory: 512Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -49,8 +49,8 @@ spec:
               cpu: 50m
               memory: 64Mi
             limits:
-              cpu: ~
-              memory: 256Mi
+              cpu: 100m
+              memory: 512Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -66,9 +66,6 @@ spec:
             requests:
               cpu: 50m
               memory: 64Mi
-            limits:
-              cpu: ~
-              memory: 256Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -85,8 +82,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: ~
-              memory: 256Mi
+              cpu: 100m
+              memory: 512Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -103,8 +100,8 @@ spec:
               cpu: 20m
               memory: 64Mi
             limits:
-              cpu: ~
-              memory: 256Mi
+              cpu: 100m
+              memory: 512Mi
 
 ---
 apiVersion: v1
