--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -396,9 +396,10 @@ jobs:
       - name: Create Test Cluster
         run: |
           k3d registry create $LOCAL_REGISTRY --port $LOCAL_REGISTRY_PORT
-          k3d cluster create $K3D_CLUSTER --image rancher/k3s:${K3S_VERSION} --k3s-arg '--disable=traefik,metrics-server@server:*' --port 80:80@loadbalancer \
-          --server-arg '--kubelet-arg=eviction-hard=imagefs.available<1%,nodefs.available<1%' \
-          --server-arg '--kubelet-arg=eviction-minimum-reclaim=imagefs.available=1%,nodefs.available=1%'
+          k3d cluster create $K3D_CLUSTER --image rancher/k3s:${K3S_VERSION} --port 80:80@loadbalancer \
+            --k3s-arg '--disable=traefik,metrics-server@server:*' \
+            --k3s-arg '--kubelet-arg=eviction-hard=imagefs.available<1%,nodefs.available<1%' \
+            --k3s-arg '--kubelet-arg=eviction-minimum-reclaim=imagefs.available=1%,nodefs.available=1%'
       - name: Check disk size
         run: df -h
       - name: Setup cluster
