Run docker image prune first

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -434,6 +434,8 @@ jobs:
         run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.MERLIN_CHART_VERSION }}
       - name: Check disk size
         run: df -h
+      - name: Prune docker image to make some space
+        run: docker image prune
       - name: Run E2E Test
         timeout-minutes: 30
         id: run-e2e-test
