--- a/scripts/e2e/config/minio/values.yaml
+++ b/scripts/e2e/config/minio/values.yaml
@@ -1,8 +1,13 @@
 replicas: 4
+
 resources:
   requests:
-    cpu: 25m
+    cpu: 10m
     memory: 64Mi
+  limits: ~
+
+accessKey: YOURACCESSKEY
+secretKey: YOURSECRETKEY
 
 rootUser: YOURACCESSKEY
 rootPassword: YOURSECRETKEY
@@ -13,15 +18,10 @@ ingress:
     kubernetes.io/ingress.class: istio
   path: /
   hosts:
-  - minio.minio.127.0.0.1.nip.io
+    - minio.minio.127.0.0.1.nip.io
 
 consoleIngress:
-  enabled: true
-  annotations:
-    kubernetes.io/ingress.class: istio
-  path: /
-  hosts:
-  - console.minio.127.0.0.1.nip.io
+  enabled: false
 
 buckets:
   - name: mlflow
