--- a/examples/model-endpoint/requirements.txt
+++ b/examples/model-endpoint/requirements.txt
@@ -1,4 +1,4 @@
-scikit-learn==1.0.2  # >=1.1.2 upon python 3.7 deprecation
+scikit-learn==1.0.2>=1.1.2
 merlin-sdk
 joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
 cloudpickle==2.0.0
