--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -4,4 +4,5 @@ mlflow>=1.2.0,<=1.23.0
 cloudpickle==2.0.0
 pyarrow>=0.14.1,<=9.0.0
 protobuf>=3.0,<4.0.0
-file:${SDK_PATH}#egg=merlin-sdk
+#TODO: Update merlin-sdk dep to: file:${SDK_PATH}#egg=merlin-sdk
+merlin-sdk==0.33.0 # Pin to the version that supports Python 3.7.
