--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@
 version: '3'
 services:
   postgres:
-    image: bitnami/postgresql:14.5.0
+    image: bitnami/postgresql:latest
     ports:
       - 5432:5432
     environment:
