--- a/examples/pyfunc/env.yaml
+++ b/examples/pyfunc/env.yaml
@@ -1,7 +1,7 @@
 dependencies:
-  - python=3.7
+  - python=3.8
   - pip:
     - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
     - numpy
-    - scikit-learn==1.0.2  # >=1.1.2 upon python 3.7 deprecation
+    - scikit-learn==1.0.2  #TODO: >=1.1.2 upon python 3.7 deprecation
     - xgboost==1.6.2
