--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["37", "38", "39", "310"]
+        python-version: ["38", "39", "310"]
     steps:
       - name: Log in to the Container registry
         uses: docker/login-action@v1
@@ -132,7 +132,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["37", "38", "39", "310"]
+        python-version: ["38", "39", "310"]
     steps:
       - name: Log in to the Container registry
         uses: docker/login-action@v1
