--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -12,3 +12,5 @@ grpcio-reflection<1.49.0
 grpcio-tools<1.49.0
 grpcio-health-checking<1.49.0
 file:${SDK_PATH}#egg=merlin-sdk
+opentelemetry-api 
+opentelemetry-sdk
