--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -11,6 +11,7 @@ grpcio<1.49.0
 grpcio-reflection<1.49.0
 grpcio-tools<1.49.0
 grpcio-health-checking<1.49.0
+numpy<1.24
 opentelemetry-api 
 opentelemetry-sdk
 opentelemetry-ext-jaeger
