--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -12,7 +12,7 @@ grpcio-reflection<1.49.0
 grpcio-tools<1.49.0
 grpcio-health-checking<1.49.0
 numpy<1.24
-opentelemetry-api 
-opentelemetry-sdk
-opentelemetry-ext-jaeger
+opentelemetry-api==1.19.0
+opentelemetry-sdk==1.19.0
+opentelemetry-ext-jaeger==1.19.0
 file:${SDK_PATH}#egg=merlin-sdk
