--- a/python/batch-predictor/requirements_test.txt
+++ b/python/batch-predictor/requirements_test.txt
@@ -6,5 +6,5 @@ scikit-learn==1.0.2  #TODO: >=1.1.2 upon python 3.7 deprecation
 joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
 mypy-protobuf>=1.19
 types-PyYAML
-protobuf<4.0.0
+protobuf>4.21.0,<5.0.0
 grpcio<1.49.0
