--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -5,12 +5,9 @@ prometheus_client==0.14.1
 uvloop>=0.15.2
 orjson>=2.6.8
 tornado
+grpcio-reflection
+grpcio-health-checking
 caraml-upi-protos==0.3.7rc1
-# Starting 1.49.0, grpc uses protobuf 4.X which are incompatible with most of our dependencies
-grpcio<1.49.0
-grpcio-reflection<1.49.0
-grpcio-tools<1.49.0
-grpcio-health-checking<1.49.0
 numpy<1.24
 opentelemetry-api==1.19.0
 opentelemetry-sdk==1.19.0
