Temp: make e2e not mandatory

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -439,7 +439,7 @@ jobs:
     uses: ./.github/workflows/release.yml
     needs:
       - create-version
-      - e2e-test
+      # - e2e-test
       - test-api
       - test-python-sdk
       - test-pyfunc-server
