--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -1,6 +1,6 @@
 findspark
 pyspark==3.0.1
-mlflow>=1.26.1,<=2.0.0
+mlflow>=1.26.1,<2.0.0
 cloudpickle==2.0.0
 pyarrow>=0.14.1,<=9.0.0
 file:${SDK_PATH}#egg=merlin-sdk
