--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -2,7 +2,8 @@ argparse>=1.4.0
 numpy >= 1.8.2
 cloudpickle==2.0.0
 prometheus_client==0.14.1
-uvloop>=0.15.2
+#TODO: Remove uvloop pinning once we drop Python 3.7 support
+uvloop>=0.15.2,<0.18.0
 orjson>=2.6.8
 tornado
 caraml-upi-protos
