Set CreatedAt value of VersionEndpoint

--- a/python/sdk/test/pyfunc/env.yaml
+++ b/python/sdk/test/pyfunc/env.yaml
@@ -2,7 +2,7 @@ dependencies:
   - python=3.10.*
   - pip:
     - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
-    - numpy
+    - numpy<=1.23.5  # Temporary pin numpy due to https://numpy.org/doc/stable/release/1.20.0-notes.html#numpy-1-20-0-release-notes
     - scikit-learn==1.0.2  #TODO: >=1.1.2 upon python 3.7 deprecation
     - xgboost==1.6.2
     - pytest
