--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+    needs:
+      - publish-python-sdk
     steps:
       - uses: actions/checkout@v2
       - name: Log in to the Container registry
