--- a/python/sdk/test/batch/model/env.yaml
+++ b/python/sdk/test/batch/model/env.yaml
@@ -1,7 +1,7 @@
 dependencies:
   - pip:
       - mlflow
-      - scikit-learn==1.0.2  #TODO: >=1.1.2 upon python 3.7 deprecation
+      - scikit-learn>=1.1.2
       - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
       - numpy>=1.19.5,<1.23.4 # https://github.com/Azure/MachineLearningNotebooks/issues/1314
       - pandas==1.3.5
