feat: update mlflow version to support newer version of protobuf (#465)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
<!-- Explain here the context and why you're making the change. What is
the problem you're trying to solve. --->
* Mlflow 1.26.1 or above is required in order to be compatible with
newer version of protobuf.

* This PR also drops the support for Python 3.7 from the real-time and
batch predictor servers (continuing from
https://github.com/caraml-dev/merlin/pull/464). Docs and examples are
updated accordingly.

**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes #

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
-->

```release-note
Upgrade MlFlow client version; drop Python 3.7 support 
```

**Checklist**

- [ ] Added unit test, integration, and/or e2e tests
- [ ] Tested locally
- [x] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduce API
changes

---------

Co-authored-by: Krithika Sundararajan <krithika.sundararajan@gojek.com>

--- a/python/batch-predictor/requirements_test.txt
+++ b/python/batch-predictor/requirements_test.txt
@@ -2,9 +2,7 @@ pytest
 pytest-cov
 mypy
 google-cloud-bigquery
-scikit-learn==1.0.2  #TODO: >=1.1.2 upon python 3.7 deprecation
+scikit-learn>=1.1.2
 joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
 mypy-protobuf>=1.19
 types-PyYAML
-protobuf<4.0.0
-grpcio<1.49.0
