--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,8 +63,7 @@ jobs:
         working-directory: ./python/sdk
         run: |
           IMAGE_TAG="${{ env.CONTAINER_REGISTRY }}/merlin-sdk:py${{ matrix.python-version }}-${{ inputs.version }}"
-          SDK_VERSION="$(sed 's/^v\(.*\)-/\1/' <<< "${{ inputs.version }}")"
-          docker build -t ${IMAGE_TAG} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg VERSION=${SDK_VERSION} .
+          docker build -t ${IMAGE_TAG} --build-arg PYTHON_VERSION=${{ matrix.python-version }} .
           docker push ${IMAGE_TAG}
 
   publish-api:
@@ -106,7 +105,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["37", "38", "39", "310"]
+        python-version: ["38", "39", "310"]
     steps:
       - name: Log in to the Container registry
         uses: docker/login-action@v1
@@ -132,7 +131,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["37", "38", "39", "310"]
+        python-version: ["38", "39", "310"]
     steps:
       - name: Log in to the Container registry
         uses: docker/login-action@v1
