--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -1,8 +1,7 @@
 findspark
 pyspark==3.0.1
-mlflow>=1.2.0,<=1.23.0
+mlflow>=1.26.1,<2.0.0
 cloudpickle==2.0.0
 pyarrow>=0.14.1,<=9.0.0
-protobuf>=3.0,<4.0.0
-#TODO: Update merlin-sdk dep to: file:${SDK_PATH}#egg=merlin-sdk
-merlin-sdk==0.33.0 # Pin to the version that supports Python 3.7.
+protobuf>=3.0,<5.0.0
+file:${SDK_PATH}#egg=merlin-sdk
