--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -7,4 +7,6 @@ uvloop>=0.15.2,<0.18.0
 orjson>=2.6.8
 tornado
 caraml-upi-protos
+grpcio-reflection
+grpcio-health-checking
 file:${SDK_PATH}#egg=merlin-sdk
